--- a/FED/mauiCalc/MauiCalc/MainPage.xaml
+++ b/FED/mauiCalc/MauiCalc/MainPage.xaml
@@ -6,6 +6,110 @@
             ColumnDefinitions="*,*,*,*,*"
             RowSpacing="2"
             ColumnSpacing="2">
+
+            <Button Grid.Row="1"
+                    Grid.Column="0"
+                    CornerRadius="0"
+                    Text="7"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="1"
+                    Grid.Column="1"
+                    CornerRadius="0"
+                    Text="8"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="1"
+                    Grid.Column="2"
+                    CornerRadius="0"
+                    Text="9"
+                    Clicked="Button_clicked"/>
+
+                <!-- row 2 -->
+
+            <Button Grid.Row="2"
+                    Grid.Column="0"
+                    CornerRadius="0"
+                    Text="4"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="2"
+                    Grid.Column="1"
+                    CornerRadius="0"
+                    Text="5"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="2"
+                    Grid.Column="2"
+                    CornerRadius="0"
+                    Text="6"
+                    Clicked="Button_clicked"/>
+
+                <!-- row 3 -->
+            <Button Grid.Row="3"
+                    Grid.Column="0"
+                    CornerRadius="0"
+                    Text="1"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="3"
+                    Grid.Column="1"
+                    CornerRadius="0"
+                    Text="2"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="3"
+                    Grid.Column="2"
+                    CornerRadius="0"
+                    Text="3"
+                    Clicked="Button_clicked"/>
+
+                <!-- row 4 -->
+
+            <Button Grid.Row="4"
+                    Grid.Column="2"
+                    CornerRadius="0"
+                    Text="."
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="4"
+                    Grid.Column="1"
+                    CornerRadius="0"
+                    Text="0"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="4"
+                    Grid.Column="2"
+                    CornerRadius="0"
+                    Text="="
+                    Clicked="Button_clicked"/>
+
+                <!-- row operator buttons column 3 -->
+
+            <Button Grid.Row="1"
+                    Grid.Column="3"
+                    CornerRadius="0"
+                    Text="+"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="2"
+                    Grid.Column="3"
+                    CornerRadius="0"
+                    Text="-"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="3"
+                    Grid.Column="3"
+                    CornerRadius="0"
+                    Text="X"
+                    Clicked="Button_clicked"/>
+
+            <Button Grid.Row="4"
+                    Grid.Column="3"
+                    CornerRadius="0"
+                    Text="/"
+                    Clicked="Button_clicked"/>
+
         </Grid>
 
 </ContentPage>
