--- a/FED/mauiCalcReal/MauiCalculator/MainPage.xaml
+++ b/FED/mauiCalcReal/MauiCalculator/MainPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiCalc.MainPage">
+             x:Class="MauiCalculator.MainPage">
 
-        <Grid   RowDefinitions="*,*,*,*"
-                ColumnDefinitions="*,*,*,*,*"
-                RowSpacing="2"
-                ColumnSpacing="2">
+    <Grid   
+        RowDefinitions="100,100,100,100,100"
+        ColumnDefinitions="100,100,100,100"
+        HorizontalOptions="Center"
+        RowSpacing="2"
+        ColumnSpacing="2">
             
         <Label 
                 Grid.Row="0"
@@ -83,7 +85,7 @@
                 <!-- row 4 -->
 
             <Button Grid.Row="4"
-                    Grid.Column="2"
+                    Grid.Column="0"
                     CornerRadius="0"
                     Text="."
                     Clicked="Button_Clicked"/>
